selfhost/test/typechecker/indexing/tuple_error_non_int_literal.out
Error at %FILE_NAME%:3:2
Unsupported tuple indexing operation
  |  t["hello"]
      ^
Cannot use non-Int literal as index value. Tuple index values must always be Int literals
